--- a/installs/readme
+++ b/installs/readme
@@ -5,7 +5,7 @@ this folder contains installation files to be downloaded separatly
 from Redhat downloads       
 
         ==> jboss-fsw-installer-6.0.0.GA-redhat-4.jar 
-        ==> jboss-bpms-6.0.0.GA-redhat-1-deployable-eap6.x.zip
+        ==> jboss-bpms-6.0.0.GA-redhat-1-deployable-eap6.x
         ==> jboss-eap-6.1.1.zip
 
 
